add list-row center alignment

--- a/src/css/list-row.css
+++ b/src/css/list-row.css
@@ -1,6 +1,6 @@
 .list-row {
-  display: flex;
-  flex-direction: row;
+  display: inline-block;
+  width: 100%;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
